versions/v3.6.0/doxygen/html/structvideo__driver__api.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/structvideo__driver__api.html
original_path: doxygen/html/structvideo__driver__api.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

video\_driver\_api Struct Reference

[Device Driver APIs](group__io__interfaces.md) » [Video Interface](group__video__interface.md)

`#include <[video.h](video_8h_source.md)>`

| Data Fields | |
| --- | --- |
| [video\_api\_set\_format\_t](group__video__interface.md#gaf6e1ac05a51ae9afaf2569311853ee18) | [set\_format](#a6ef22653b6ba24b935390795830251f8) |
| [video\_api\_get\_format\_t](group__video__interface.md#ga7c85f21c1e1839bce84bbce3e339903d) | [get\_format](#a5c89e8128d610dd123456f83a4f2cca4) |
| [video\_api\_stream\_start\_t](group__video__interface.md#ga06fe3e6bfed2d817c5c239161d8a777e) | [stream\_start](#a32759d924c983ca5aabf47e7c2d23acc) |
| [video\_api\_stream\_stop\_t](group__video__interface.md#ga5e8564970bd5cc3b57ee23ff223460bd) | [stream\_stop](#a07335db8e854f8561f8fdf037def106c) |
| [video\_api\_get\_caps\_t](group__video__interface.md#gad4a0c666d5534f9daed7d3c9a00c1312) | [get\_caps](#a6ab4deb345d2138e63e0c6126eeb5078) |
| [video\_api\_enqueue\_t](group__video__interface.md#ga161a0320e7e84935f809d6460064c0fe) | [enqueue](#a4762a3f103ca5999e3d3f790bb74af75) |
| [video\_api\_dequeue\_t](group__video__interface.md#ga16c82da50c6024d36b65fd1c6f33721d) | [dequeue](#a96ba1bb4b76c7efc445b3071ef3a05ef) |
| [video\_api\_flush\_t](group__video__interface.md#gad308f355cd9d5a5d56bd0c81d31626db) | [flush](#a963927cc38174c4703470df04ec73dc6) |
| [video\_api\_set\_ctrl\_t](group__video__interface.md#gad392294a57d6fb191058cf852a5adc8a) | [set\_ctrl](#a1037a6a768906604c58032e25efabbb8) |
| [video\_api\_set\_ctrl\_t](group__video__interface.md#gad392294a57d6fb191058cf852a5adc8a) | [get\_ctrl](#a40bc476e1e89c42ef78cb99e98d83b38) |
| [video\_api\_set\_signal\_t](group__video__interface.md#ga9d08347300d2e3c8dc7ae01d2902d321) | [set\_signal](#a59dbaa93982c354c16d5de63c0d03ec2) |

## Field Documentation

## [◆ ](#a96ba1bb4b76c7efc445b3071ef3a05ef)dequeue

| [video\_api\_dequeue\_t](group__video__interface.md#ga16c82da50c6024d36b65fd1c6f33721d) video\_driver\_api::dequeue |
| --- |

## [◆ ](#a4762a3f103ca5999e3d3f790bb74af75)enqueue

| [video\_api\_enqueue\_t](group__video__interface.md#ga161a0320e7e84935f809d6460064c0fe) video\_driver\_api::enqueue |
| --- |

## [◆ ](#a963927cc38174c4703470df04ec73dc6)flush

| [video\_api\_flush\_t](group__video__interface.md#gad308f355cd9d5a5d56bd0c81d31626db) video\_driver\_api::flush |
| --- |

## [◆ ](#a6ab4deb345d2138e63e0c6126eeb5078)get\_caps

| [video\_api\_get\_caps\_t](group__video__interface.md#gad4a0c666d5534f9daed7d3c9a00c1312) video\_driver\_api::get\_caps |
| --- |

## [◆ ](#a40bc476e1e89c42ef78cb99e98d83b38)get\_ctrl

| [video\_api\_set\_ctrl\_t](group__video__interface.md#gad392294a57d6fb191058cf852a5adc8a) video\_driver\_api::get\_ctrl |
| --- |

## [◆ ](#a5c89e8128d610dd123456f83a4f2cca4)get\_format

| [video\_api\_get\_format\_t](group__video__interface.md#ga7c85f21c1e1839bce84bbce3e339903d) video\_driver\_api::get\_format |
| --- |

## [◆ ](#a1037a6a768906604c58032e25efabbb8)set\_ctrl

| [video\_api\_set\_ctrl\_t](group__video__interface.md#gad392294a57d6fb191058cf852a5adc8a) video\_driver\_api::set\_ctrl |
| --- |

## [◆ ](#a6ef22653b6ba24b935390795830251f8)set\_format

| [video\_api\_set\_format\_t](group__video__interface.md#gaf6e1ac05a51ae9afaf2569311853ee18) video\_driver\_api::set\_format |
| --- |

## [◆ ](#a59dbaa93982c354c16d5de63c0d03ec2)set\_signal

| [video\_api\_set\_signal\_t](group__video__interface.md#ga9d08347300d2e3c8dc7ae01d2902d321) video\_driver\_api::set\_signal |
| --- |

## [◆ ](#a32759d924c983ca5aabf47e7c2d23acc)stream\_start

| [video\_api\_stream\_start\_t](group__video__interface.md#ga06fe3e6bfed2d817c5c239161d8a777e) video\_driver\_api::stream\_start |
| --- |

## [◆ ](#a07335db8e854f8561f8fdf037def106c)stream\_stop

| [video\_api\_stream\_stop\_t](group__video__interface.md#ga5e8564970bd5cc3b57ee23ff223460bd) video\_driver\_api::stream\_stop |
| --- |

---

The documentation for this struct was generated from the following file:

- zephyr/drivers/[video.h](video_8h_source.md)

- [video\_driver\_api](structvideo__driver__api.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
